# run-planner

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: activities.py  ai.py  analytics.py  auth.py  health.py  planning.py  plans.py  sync.py  version.py  webhooks.py
backend/app/core/: auth.py  config.py  crypto.py  session.py
backend/app/db/: migrations.py  session.py
backend/app/models/: __init__.py  planning.py  strava.py
backend/app/schemas/: activities.py  ai.py  analytics.py  planning.py  session.py  strava.py
backend/app/services/: accounts.py  analytics.py  planning.py  plans.py  strava.py
backend/app/workers/: main.py
backend/migrations/: 20260617_001_planning.sql  20260617_002_strava.postgresql.sql  20260617_002_strava.sql  20260617_003_sync_unchanged.sql  20260622_004_week_goals.sql  20260625_005_user_accounts.sql  20260629_006_strava_webhooks.postgresql.sql  20260629_006_strava_webhooks.sql  20260702_007_training_plans.sql
backend/scripts/: migrate_sqlite_to_postgres.py
backend/tests/: conftest.py  test_analytics.py  test_health.py  test_planning.py  test_plans.py  test_strava.py  test_webhooks.py  test_worker.py
data/: run-planner.local.sqlite
docs/: architecture.md  backup-restore.md  caddy.md  data-model.md  strava-integration.md  training-plans-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
requirements/: running-planner-requirements.md  (+2 more)
scripts/: deploy-remote.sh  (+2 more)
(+34 files in other folders)
